[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemies/Millenium Falcon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Millenium_Falcon.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Other/Explosion particle.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.417
height = 10.345

[node name="Millenium_Falcon" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Laser_pos" type="Node2D" parent="."]
position = Vector2( 0, 18 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
